# MBPlaylist

./: CMakeLists.txt  M3uCreator.cpp  M3uCreator.h  MbpCreator.cpp  MbpCreator.h  README.md  SongList.cpp  SongList.h  SongListQueue.cpp  SongListQueue.h  clara.hpp  clara_textflow.hpp  config.ini  globals.h  main.cpp  md5.cpp  song.cpp  song.h  songList.cpp  songList.h
resources/: Canciones que tienen errores.mbp  John Denver.mbp  Para fiesta.mbp  Para videos.mbp  TestMB.mbp  Vertigo.mbp
